# jncpp

./: CMakeLists.txt  LICENSE  README.md  cmake_uninstall.cmake.in
examples/: call_once.cpp  defer.cpp
include/jncpp/: call_once.hpp  defer.hpp
